# claude-rename-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  SOUL.md  agent.yaml  install.sh  pyproject.toml  requirements.txt
.claude/skills/rename/: SKILL.md
.claude/skills/rename-agent/: SKILL.md
.github/workflows/: publish.yml
data/: history.json  patterns.json
rename_agent/: __init__.py  agent.py  cli.py  mcp_server.py
rename_agent/models/: __init__.py  document.py
rename_agent/patterns/: __init__.py  default_patterns.py  pattern_store.py
rename_agent/tools/: __init__.py  file_analyzer.py  file_renamer.py  pattern_manager.py
