[project]
name = "rename-agent"
version = "0.1.0"
description = "AI-powered file renaming agent using Claude Agent SDK with pattern learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "python-magic>=0.4.27",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
rename-agent = "rename_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rename_agent"]
